# 2252

./: .gitignore  CLAUDE.md  example_convo.txt  pyproject.toml  spectral_embedding.py
configs/: _smoke.yaml  _smoke_spectral.yaml  example.yaml  generated_bundle_example.yaml
datasets/: README.md
datasets/raw/: karate_club.labels
datasets/social/: karate_club.npz  karate_club_from_edgelist.npz
datasets/synthetic/: core_periphery_10_5x6.npz  core_periphery_12_6x5.npz  lfr_n100_mu015_seed2.npz  lfr_n80_mu010_seed0.npz  lfr_n80_mu020_seed1.npz  ring_of_cliques_6x8.npz  ring_of_cliques_8x6.npz  sbm_20_40_80_seed1.npz  sbm_30x4_overlap_seed2.npz  sbm_40_40_40_seed0.npz
docs/: computational_section_slides.md  main.tex
prompts/: codebase_setup.txt
scripts/: datasets.py  plot_controlled_sbm_scale.py  plot_lfr_mixing_example.py  plot_runtime_results.py  plot_sbm_assortativity_example.py  plot_social_results.py  plot_sweep_results.py  run.py  run_sweep_large.sh  run_sweep_medium.sh  run_sweep_small.sh  slurm_sweep_cpu.sh  submit_cpu_sweeps.sh  sweep_benchmarks.py  sweep_common.sh
src/algorithms/: __init__.py  base.py  fiedler.py  kmeans.py  louvain.py  markov.py  shi_malik.py  spectral.py
src/baselines/: __init__.py  base.py  kmeans.py
src/core/: config.py  graph.py  registry.py  results.py  runner.py
src/data/: __init__.py  base.py  io.py  serialized.py
src/evals/: __init__.py  base.py  clustering.py
